--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "projeto utilizando node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "nodemon -e ts,json src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "mustache": "^4.2.0",
+    "mustache-express": "^1.3.2",
     "validator": "^13.9.0"
   },
   "devDependencies": {
