--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
-    "validator": "^13.9.0"
+    "passport": "^0.6.0",
+    "validator": "^13.9.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
-    "@types/mustache-express": "^1.2.2"
+    "@types/mustache-express": "^1.2.2",
+    "@types/passport": "^1.0.12"
+
   }
 }
